using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DesignPattern.Base
{
    internal abstract class DemoRunner
    {
        public abstract string Description { get; }
        public abstract void Run();
    }
}
