using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DesignPattern.Base
{
    internal static class Test
    {
        public static void Run(DemoRunner demoRunner)
        {
            demoRunner.Run();
        }
    }
}
